# fastapi-test

./: .env.sample  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
.github/actions/setup/: action.yml
.github/workflows/: check.yml  deploy_preview.yml  deploy_prod.yml
config/: .env.sample  __init__.py
db/: __init__.py  alembic.ini
db/migrations/: env.py
db/migrations/versions/: 20250923_110735_ddbc26ca419e_create_t_users.py  20250923_111534_eafe7933236d_create_t_posts.py  20250923_112013_c1012eca6ace_create_t_todos.py  20250923_112451_b4d7f3ca0b3d_create_t_comments.py  20251002_191419_9d1b9f166528_create_table.py  20251004_122517_6bb559f7d823_create_v_todos.py  20251004_122530_efe5d38a115b_create_v_posts.py  20251004_122535_e5c87e6715e5_create_v_comments.py
db/models/: __init__.py  comments.py  posts.py  todos.py  users.py
src/: __init__.py  main.py
src/common/v1/: cruds.py  types.py
src/common/v2/: cruds.py
src/features/v1/: __init__.py
src/features/v1/comments/: controllers.py  cruds.py  routers.py  types.py
src/features/v1/login/: controllers.py  routers.py  types.py
src/features/v1/posts/: controllers.py  cruds.py  routers.py  types.py
src/features/v1/todos/: controllers.py  cruds.py  routers.py  types.py
src/features/v1/users/: controllers.py  cruds.py  routers.py  types.py
src/features/v2/: __init__.py
src/features/v2/login/: controllers.py  routers.py
src/features/v2/users/: controllers.py  cruds.py  routers.py  types.py
src/features/v2/users/posts/: controllers.py  cruds.py  routers.py  types.py
src/features/v2/users/posts/comments/: types.py
src/features/v2/users/todos/: controllers.py  cruds.py  routers.py  types.py
src/utils/v1/: json.py  login.py
src/utils/v2/: login.py
