[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["yoshi0518"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
taskipy = "^1.12.2"
black = "^24.2.0"
pyproject-flake8 = "^6.1.0"
flake8-bugbear = "^24.2.6"
isort = "^5.13.2"
mypy = "^1.8.0"
poetry-plugin-export = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = { cmd = "python src/main.py", help = "launch fastapi test server" }
test = { cmd = "pytest ./tests --capture=no", help = "runs all unit tests" }
fmt = { cmd = "task fmt_isort && task fmt_black", help = "exec format" }
fmt_isort = "isort ./config ./src ./tests"
fmt_black = "black ./config ./src ./tests"
lint = { cmd = "task lint_black && task lint_flake8 && task lint_mypy", help = "exec lint" }
# lint_black = "black --check ./config ./db ./src ./tests"
lint_black = "black --check ./config ./src ./tests"
# lint_flake8 = "flake8 --max-line-length=119 ./config ./db ./src ./tests"
lint_flake8 = "flake8 --max-line-length=119 ./config ./src ./tests"
# lint_mypy = "mypy ./config ./db ./src ./tests"
lint_mypy = "mypy ./config ./src ./tests"

[tool.flake8]
max-line-length = 119
max-complexity = 30
select = "C,E,F,W,B"
ignore = "E203"

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119
exclude = '''
(
    .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
)
'''

[tool.mypy]
# common
python_version = 3.12
show_column_numbers  = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
# plugins
plugins = [
  "pydantic.mypy"
]

[pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
