[project]
name = "fastapi-test"
version = "1.0.0"
description = ""
authors = ["yoshi0518"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "orjson>=3.11.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-utils>=0.42.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
    "taskipy>=1.14.1",
    "ty>=0.0.1a19",
]

[tool.taskipy.tasks]
fmt = { cmd = "ruff format ./config ./db ./src ./tests", help = "exec format" }
lint = { cmd = "ruff check --fix ./config ./db ./src ./tests", help = "exec lint" }
typecheck = { cmd = "ty check", help = "exec type check" }
check = { cmd = "task fmt && task lint && task typecheck", help = "exec all check" }
start = { cmd = "python src/__init__.py", help = "launch test server" }

[tool.ruff]
line-length = 119
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B904",  # raise ... from ... になっていない場合のエラーを無視
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
